--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"name": "Example",
 	"private": true,
 	"scripts": {
 		"test": "npm -s run lint",
@@ -11,7 +12,7 @@
 	},
 	"devDependencies": {
 		"eslint-config-wikimedia": "0.20.0",
-		"grunt-banana-checker": "0.9.0",
-		"stylelint-config-wikimedia": "0.11.1"
+		"grunt-banana-checker": "0.10.0",
+		"stylelint-config-wikimedia": "0.13.1"
 	}
 }
